--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
       margin: 0;
       padding: 0;
     }
+    button{
+        background-color: transparent;
+        border: none;
+        cursor: pointer;
+        outline: none;
+        padding: 0;
+        appearance: none;
+}
     </style>
   <body>
     <div id="app"></div>
